--- a/index.html
+++ b/index.html
@@ -94,19 +94,14 @@
  </script>
 
  <script>
-   // Manifest injection
+   // Inline Manifest (no icon)
    const manifest = {
      name: "RayBOT",
      short_name: "RayBOT",
      start_url: "./",
      display: "standalone",
      background_color: "#000000",
-     theme_color: "#000000",
-     icons: [{
-       src: "https://crh2507.github.io/5/icon-192.png",
-       sizes: "192x192",
-       type: "image/png"
-     }]
+     theme_color: "#000000"
    };
    const blob = new Blob([JSON.stringify(manifest)], {type: 'application/json'});
    const manifestURL = URL.createObjectURL(blob);
