--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <div id="chat"></div>
  <form id="form">
    <input id="input" autocomplete="off" placeholder="Ask me something..." />
-   <button>Send</button>
+   <button type="submit">Send</button>
  </form>
 
  <script>
